align issues

--- a/res/board_abs.css
+++ b/res/board_abs.css
@@ -157,12 +157,13 @@ div.mat-wrapper {
 
 #myname, #opponame, #myscore, #opposcore {
 	width: 132px;
+	text-align: center;
+	margin-left: 20px;
 }
 
 #myname, #opponame {
 	/*font-family: Microsoft YaHei, monospace;*/
 	font-size: 16px;
-	text-align: right;
 	font-weight: bold;
 	display: inline-block;
 }
@@ -170,7 +171,7 @@ div.mat-wrapper {
 #myscore, #opposcore {
 	/*font-family: Microsoft YaHei, monospace;*/
 	font-size: 64px;
-	text-align: right;
+	text-align: center;
 }
 
 #oppogameinfo, #mygameinfo {
@@ -181,12 +182,14 @@ div.mat-wrapper {
 	position: absolute;
 	top: 730px;
 	color: #e0e0e0;
+	text-align: center;
 }
 
 #opposcore {
 	position: absolute;
 	top: 230px;
 	color: #c0c0c0;
+	text-align: center;
 }
 
 #myrq, #opporq {
